# cursor-news

./: .env.example  .gitattributes  .gitignore  ANDROID_APP.md  CONTRIBUTING.md  LICENSE  MIGRATION_WINDOWS.md  PLAY_STORE_PUBLISHING.md  PRIVACY.md  README.md  SECURITY.md  UBUNTU_SERVER_SETUP.md  pyproject.toml
android/: build.gradle  build_android_debug.cmd  gradle.properties  gradlew  gradlew.bat  release.properties.example  settings.gradle
android/app/: build.gradle
config/: schedule.yml  sources.yml
deploy/gcp-player/: Dockerfile  app.js  archive.html  archive.js  index.html  privacy.html  styles.css
scripts/: bootstrap_ubuntu.sh  build_android_debug.cmd  build_android_release.cmd  check_ubuntu_server.sh  create_android_upload_key.cmd  diagnose_ubuntu.sh  export_autodj.cmd  install_ffmpeg_windows.cmd  install_systemd_ubuntu.sh  prepare_ubuntu_usb_windows.cmd  publish_android_internal.cmd  run_once.cmd  run_server.cmd  run_stream.cmd  run_tick_ubuntu.sh  run_worker.cmd  setup_windows.cmd
src/cursor_news/: __init__.py  article_filter.py  audio.py  autodj.py  cli.py  database.py  executables.py  gcp_publish.py  ingest.py  language.py  llm.py  models.py  pipeline.py  schedule.py  settings.py  site_export.py  sources.py  streamer.py  text.py  tts.py  uploader.py  web.py  worker.py
tests/: test_article_filter.py  test_autodj.py  test_database.py  test_executables.py  test_gcp_publish.py  test_ingest.py  test_language.py  test_llm.py  test_pipeline.py  test_schedule.py  test_site_export.py  test_streamer.py  test_tts.py  test_uploader.py  test_web.py
(+16 files in other folders)
