[project]
name = "cursor-news"
version = "0.1.0"
description = "Prototype local de web-radio d'actualites automatisee, CPU-only et migrable Windows."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "edge-tts>=7.2.8",
    "feedparser>=6.0.11",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "mutagen>=1.47.0",
    "onnxruntime>=1.23,<1.24",
    "piper-tts>=1.4.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]
tts = [
    "coqui-tts[languages]>=0.27.5",
    "onnxruntime>=1.23,<1.24",
    "piper-tts>=1.4.2",
    "torch>=2.2.0,<2.9",
    "torchaudio>=2.2.0,<2.9",
    "transformers>=4.41,<5",
]

[project.scripts]
cursor-news = "cursor_news.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
